k8s/base/garage/garage-operator/instance/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
spec:
  hostnames:
    - "*.s3.siron.casa"
  parentRefs:
    - name: internal
      namespace: network
      sectionName: s3-https
  rules:
    - backendRefs:
        - name: garage
          namespace: garage
          port: 3900
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-admin
spec:
  hostnames:
    - s3.siron.casa
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: garage
          namespace: garage
          port: 3903
